--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PL'
+- GITenberg
 title: Hiwaga ng Pagibig
 url: http://www.gutenberg.org/ebooks/18955
